--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,10 +1,12 @@
 .card{
     overflow:hidden;
-    height: 550px;
+    height: 400px;
     width: 320px;
     border: 1px solid #bdbdbd;
     border-radius: 5px;
     box-shadow:0 3px 2px rgba(0, 0, 0, 0.3);
+    background-color:#1c1c1c;
+    color: white;
     transition: all 0.7s;
   }
   
@@ -16,12 +18,12 @@
   
   .image{
     width:320px;
-    height: 380px;
+    height: 250px;
     object-fit: cover;
     border-radius:9px;
     border-bottom-left-radius:0;
     border-bottom-right-radius:0;
-    background-color:rgb(255,255,255);
+   
     transition: all 0.7s ;
   }
 
@@ -42,7 +44,7 @@
   }
   
   .info{
-    width:80%;
+    width:100%;
     max-height:0px;
     opacity:0;
     text-align: justify;
@@ -56,7 +58,7 @@
   
   .buttonMore{ 
     position: absolute;
-    height: 25px;
+    height: 20px;
     width: 120px;
     background-color:#ec1d24;
     color: white;
@@ -67,9 +69,8 @@
     align-items: center;
     z-index:1;
     font-size: 16px;
-    margin: auto
   }
 
   .contentInfo{
-    padding: 15px;
+    padding: 10px 15px; 
   }
