--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -5,8 +5,8 @@
     border: 1px solid #bdbdbd;
     border-radius: 5px;
     box-shadow:0 3px 2px rgba(0, 0, 0, 0.3);
-    background-color:#1c1c1c;
-    color: white;
+    background-color: white;
+    color: black;
     transition: all 0.7s;
   }
   
@@ -40,7 +40,7 @@
 
   
   .sub{
-    color:#aaa;
+    color:black;
   }
   
   .info{
