--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -1,42 +1,51 @@
 .card{
     overflow:hidden;
-    height: 400px;
-    width: 320px;
+    height: 450px;
+    width: 300px;
     border: 1px solid #bdbdbd;
-    border-radius: 5px;
     box-shadow:0 3px 2px rgba(0, 0, 0, 0.3);
     background-color: white;
     color: black;
     transition: all 0.7s;
+    
   }
   
   .card:hover{
-    box-shadow:0 10px 13px rgba(0, 0, 0, 0.3), 0  10px 10px rgba(0, 0, 0, 0.1) ;
+    box-shadow:0 10px 13px rgb(255, 255, 255), 0  10px 10px rgba(0, 0, 0, 0.1) ;
   }
-
- 
   
+  .fade{
+    height: 190px;
+  }
   .image{
-    width:320px;
-    height: 250px;
-    object-fit: cover;
-    border-radius:9px;
+    width:100%;
+    height: 100%;
+    object-fit:cover;
+    background-position: center;
+    /* border-radius:9px;
     border-bottom-left-radius:0;
-    border-bottom-right-radius:0;
+    border-bottom-right-radius:0; */
    
-    transition: all 0.7s ;
+    transition: all 0.5s ;
   }
 
-
-  
-  div.card:hover  img.image{
-    height: 200px;
+  .subcontent{
+    max-height:0px;
+    overflow:hidden;
+    background-color:white;
+    z-index: 2;
+    transition: max-height 0.5s ease-in;
+    position:sticky;
+    bottom: 0;
   }
+/*   
+  div.card:hover  div.subcontent{
+    max-height:250px;
+  } */
 
   .text{
     text-align:center;
   }
-
 
   
   .sub{
@@ -51,10 +60,10 @@
     transition: all 0.7s ;
   }
   
-  div.card:hover .info{
+  /* div.card:hover .info{
     max-height:120px;
     opacity: 1;
-  }
+  } */
   
   .buttonMore{ 
     position: absolute;
