--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -7,20 +7,27 @@
 
 .content{
   width: 100%;
-  height: 100%;
+  height: auto;
+  margin: 10px 0 ;
+  background-color:#202020;
+}
+
+.list {
+  border: 1px solid #838383;
+  border-left: none;
+  border-right: none;
 }
 
 .list li{
   font-weight: bold;
   text-transform: uppercase;
   color: white;
-  margin: 0 1px;
+  
   padding:  0 10px;
   height: 80%;
   display: flex;
   justify-content: center;
   align-items: center;
- 
 }
 
 
