--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -1,69 +1,50 @@
 .card{
     overflow:hidden;
     height: 450px;
-    width: 300px;
-    border: 1px solid #bdbdbd;
-    box-shadow:0 3px 2px rgba(0, 0, 0, 0.3);
-    background-color: white;
-    color: black;
-    transition: all 0.7s;
-    
+    max-width: 350px;
+    border: 1px solid #d66064;
+    border-bottom: none;
+    transition: all 0.5s ;
+
   }
   
   .card:hover{
-    box-shadow:0 10px 13px rgb(255, 255, 255), 0  10px 10px rgba(0, 0, 0, 0.1) ;
+    transform: translateY(-10px);
+    box-shadow:0 10px 13px rgb(111, 111, 111), 0  10px 10px rgba(163, 163, 163, 0.1) ;
+  }
+
+
+  .wrappy{
+    box-shadow:0 3px 2px rgba(0, 0, 0, 0.3);
+    transition: all 0.7s;
+    position: relative;
   }
   
-  .fade{
-    height: 190px;
-  }
+ 
   .image{
-    width:100%;
-    height: 100%;
+    width:350px;
+    height: 450px;
     object-fit:cover;
-    background-position: center;
-    /* border-radius:9px;
-    border-bottom-left-radius:0;
-    border-bottom-right-radius:0; */
-   
+    object-position: top ;
     transition: all 0.5s ;
   }
 
   .subcontent{
-    max-height:0px;
-    overflow:hidden;
-    background-color:white;
-    z-index: 2;
-    transition: max-height 0.5s ease-in;
-    position:sticky;
+    position: absolute;
     bottom: 0;
+    width: 100%;
+    height:120px;
+    overflow:hidden;
+    background-color:#d66064;
+    color: white;
+    transition: all 0.5s ;
+    transform: translateY(50px);
   }
-/*   
-  div.card:hover  div.subcontent{
-    max-height:250px;
-  } */
 
-  .text{
-    text-align:center;
+  .card:hover .subcontent {
+    transform: translateY(0px);
   }
 
-  
-  .sub{
-    color:black;
-  }
-  
-  .info{
-    width:100%;
-    max-height:0px;
-    opacity:0;
-    text-align: justify;
-    transition: all 0.7s ;
-  }
-  
-  /* div.card:hover .info{
-    max-height:120px;
-    opacity: 1;
-  } */
   
   .buttonMore{ 
     position: absolute;
