--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -9,7 +9,7 @@
   }
   
   .card:hover{
-    transform: translateY(-10px);
+    transform: translateY(-20px);
     box-shadow:0 10px 13px rgb(111, 111, 111), 0  10px 10px rgba(163, 163, 163, 0.1) ;
   }
 
@@ -22,7 +22,7 @@
   
  
   .image{
-    width:350px;
+    width:100%;
     height: 450px;
     object-fit:cover;
     object-position: top ;
@@ -63,4 +63,21 @@
 
   .contentInfo{
     padding: 10px 15px; 
+  }
+
+  .text{
+    text-align: center;
+  }
+
+  .subcontent i {
+    cursor: pointer;
+    font-size: 16px;
+    margin: 0 15px;
+  }
+
+  .icons{
+    margin: 30px 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
