--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -44,7 +44,6 @@
   .card:hover .subcontent {
     transform: translateY(0px);
   }
-
   
   .buttonMore{ 
     position: absolute;
@@ -73,6 +72,8 @@
     cursor: pointer;
     font-size: 16px;
     margin: 0 15px;
+    text-align: center;
+    transition: all 0.5s;
   }
 
   .icons{
@@ -80,4 +81,24 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
+  }
+
+  .jump{
+    animation: jumpi forwards 1s
+  }
+
+  @keyframes jumpi {
+    0%{
+      transform: scale(1)
+    }
+    33%{
+      transform: scale(1.2)
+    }
+    66%{
+      transform: scale(1.2)
+    }
+    100%{
+      transform: scale(1)
+    }
   }
